Added number of cells/spots/nucleoids in Figure captions

--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -71,7 +71,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \caption{}
     \begin{tabular}{lllllll}
         \toprule
-        Channel & Illumination & Exposure (ms) & Intensity & EM gain & Images (interval) & Z-stack\\
+        Channel & Illumination & Intensity & Exposure (ms) & EM gain & Images (interval) & Z-stack\\
         \midrule
         Brightfield & Lamp & NA & 30 & 0 & 1 & 16 slices, 0.2 µm step\\
         JF549 & 561-nm & 2 mW & 1000 & 150 & 50 (2 sec) & No\\
@@ -87,7 +87,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \begin{center}
     \includegraphics[width=\textwidth]{SI_Figures/SIFig_bleaching.pdf}
     \end{center}
-    \caption{Ensemble-level photobleaching of the JF549 dye. (A) Average background-subtracted fluorescence for 5 independent datasets (dots), overlaid with the photobleaching rate fit ($y=a.e^{-k.t}+b$, line) for individual datasets. (B) Fitted model parameters for each dataset: amplitude (a), photobleaching rate (k) and offset (b).}
+    \caption{Ensemble-level photobleaching of the JF549 dye. \textbf{(A)} Average background-subtracted fluorescence for 5 independent datasets (dots), overlaid with the photobleaching rate fit ($y=a.e^{-k.t}+b$, line) for individual datasets. \ncells{66,764}. \textbf{(B)} Fitted model parameters for each dataset: amplitude (a), photobleaching rate (k) and offset (b). \ncells{66,764}.}
     \label{SIFig:dye_bleaching}
 \end{suppfigure*}
 
@@ -116,7 +116,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
 \begin{center}
 \includegraphics[width=.5\linewidth]{SI_Figures/Free_Halo_image.png}
 \end{center}
-\caption{Fluorescence image (1 second exposure time) of freely diffusing Halo-tag expressed from a pBAD plasmid in MG1655 \textit{E. coli} cells.}
+\caption{Representative fluorescence image (1 second exposure time) of freely diffusing Halo-tag expressed from a pBAD plasmid in MG1655 \textit{E. coli} cells.}
 \label{SIFig:freehalo_image}
 \end{suppfigure*}
 
@@ -125,7 +125,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
 \begin{center}
 \includegraphics[width=\linewidth]{SI_Figures/Monoexp_fits_cipro.pdf}
 \end{center}
-\caption{Histograms of RecB spot lifetime (bars) under exposure to ciprofloxacin, with overlaid mono-exponential decay fits ($y=a.e^{-k.t}$, black line).}
+\caption{Histograms of RecB spot lifetime (bars) under exposure to ciprofloxacin, with overlaid mono-exponential decay fits ($y=a.e^{-k.t}$, black line). \ncells{66,764}. \nspots{170,138}}
 \label{SIFig:monoexp_fits}
 \end{suppfigure*}
 
@@ -134,7 +134,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \begin{center}
     \includegraphics[width=\linewidth]{SI_Figures/RecB_lifetime_timepoints.pdf}
     \end{center}
-    \caption{Fitted lifetimes of short- and long-lived RecB spots, following different durations of exposure to ciprofloxacin. Coloured bars represent the fitted lifetimes, and black strokes the standard error of the mean obtained by bootstrapping.}
+    \caption{Fitted lifetimes of short- and long-lived RecB spots, following different durations of exposure to ciprofloxacin. Coloured bars represent the fitted lifetimes, and black strokes the standard error of the mean obtained by bootstrapping. \ncells{66,764}. \nspots{170,138}}
     \label{SIFig:RecB_lifetimes_timepoints}
     \end{suppfigure*}
 
@@ -143,7 +143,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \begin{center}
     \includegraphics[width=\linewidth]{SI_Figures/Cell_length_Gam.pdf}
     \end{center}
-    \caption{Length of cells that over-express Gam or not (WT), under exposure to 0 or 30 ng/mL ciprofloxacin. Black dots show indvidual datasets, and bars the average between them.}
+    \caption{Length of cells that over-express Gam or not (WT), under exposure to 0 or 30 ng/mL ciprofloxacin. Black dots show indvidual datasets, and bars the average between them. \ncells{41,403}.}
     \label{SIFig:Gam_cell_length}
 \end{suppfigure*}
 
@@ -152,7 +152,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \begin{center}
     \includegraphics[width=0.6\linewidth]{SI_Figures/Gam_lifetimes_fits.pdf}
     \end{center}
-    \caption{Histograms of RecB spot lifetime (bars) in cells over-expressing the Gam protein with overlaid bi-exponential decay fits ($y=a_1.e^{-k_1.t} + a_2.e^{-k_2.t}$, black line) and individual fit components (dashed lines).}
+    \caption{Histograms of RecB spot lifetime (bars) in cells over-expressing the Gam protein with overlaid bi-exponential decay fits ($y=a_1.e^{-k_1.t} + a_2.e^{-k_2.t}$, black line) and individual fit components (dashed lines). \ncells{8,812}. \nspots{18,698}}
     \label{SIFig:Gam_RecB_lifetimes_fits}
 \end{suppfigure*}
 
@@ -170,7 +170,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \begin{center}
     \includegraphics[width=\textwidth]{SI_Figures/Nucleoid_compaction.pdf}
     \end{center}
-    \caption{Average fraction of the bacterial cell occupied by the nucleoid (stained using the Sytox Green dye) at different ciprofloxacin concentrations (0 to 30 ng/mL) and duration of exposure (15 to 75 min). Dots represent individual datasets, and dashes the average between them.}
+    \caption{Average fraction of the bacterial cell occupied by the nucleoid (stained using the Sytox Green dye) at different ciprofloxacin concentrations (0 to 30 ng/mL) and duration of exposure (15 to 75 min). Dots represent individual datasets, and dashes the average between them. \ncells{24,014}. \nnucl{31,441}.}
     \label{SIFig:nucleoid_compaction}
 \end{suppfigure*}
 
@@ -179,7 +179,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \begin{center}
     \includegraphics[width=\textwidth]{SI_Figures/Nucleoid_position.png}
     \end{center}
-    \caption{Position of the nucleoid along the cell's long axis against cell length for different ciprofloxacin concentrations (columns) and durations of ciprofloxacin exposure (rows). Point colour indicates the total surface covered by the nucleoid in the cell, in \umsq.}
+    \caption{Position of the nucleoid along the cell's long axis against cell length for different ciprofloxacin concentrations (columns) and durations of ciprofloxacin exposure (rows). Point colour indicates the total surface covered by the nucleoid in the cell, in \umsq. \ncells{24,014}. \nnucl{31,441}.}
     \label{SIFig:nucleoid_position}
 \end{suppfigure*}
 
@@ -188,7 +188,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \begin{center}
     \includegraphics[width=\textwidth]{SI_Figures/RecB_Nucleoid_position_timepoints.pdf}
     \end{center}
-    \caption{Overlay of nucleoid density and position of DNA-bound RecB molecules along the cell's long axis, for different ciprofloxacin concentrations (columns) and durations of exposure (rows).}
+    \caption{Overlay of nucleoid density and position of DNA-bound RecB molecules along the cell's long axis, for different ciprofloxacin concentrations (columns) and durations of exposure (rows). \ncells{15,029}. \nspots{58,331}. \nnucl{20,831}.}
     \label{SIFig:recb_nucleoid_timepoints}
 \end{suppfigure*}
 
@@ -197,7 +197,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \begin{center}
     \includegraphics[width=.8\textwidth]{SI_Figures/Mutants_cell_lengths.pdf}
     \end{center}
-    \caption{Evolution over time of the cell length of wild-type and mutant \emph{E. coli} strains exposed or not to ciprofloxacin (30 ng/mL). Black dots represent average cell lengths for individual datasets, and coloured bars the median values between datasets.}
+    \caption{Evolution over time of the cell length of wild-type and mutant \emph{E. coli} strains exposed or not to ciprofloxacin (30 ng/mL). Black dots represent average cell lengths for individual datasets, and coloured bars the median values between datasets. \ncells{56,131}.}
     \label{SIFig:mutants_cell_lengths}
 \end{suppfigure*}
 
@@ -206,7 +206,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \begin{center}
     \includegraphics[width=.8\textwidth]{SI_Figures/Mutants_RecB_fits.pdf}
     \end{center}
-    \caption{RecB spot lifetime histograms for wild-type (WT), \dreca and \teneighty\ strains, at 0 and 30 ng/mL ciprofloxacin, fitted with a bi-exponential decay model (black line, fit components showed as dashed lines).}
+    \caption{RecB spot lifetime histograms for wild-type (WT), \dreca and \teneighty\ strains, at 0 and 30 ng/mL ciprofloxacin, fitted with a bi-exponential decay model (black line, fit components showed as dashed lines). \ncells{56,131}. \nspots{177,646}.}
     \label{SIFig:mutants_biexp_fits}
 \end{suppfigure*}
 
@@ -215,6 +215,6 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \begin{center}
     \includegraphics[width=\textwidth]{SI_Figures/Mutants_nucleoid_compaction.pdf}
     \end{center}
-    \caption{Histograms of the fraction of the bacterial cell occupied by the nucleoid (stained using the Sytox Green dye) at different ciprofloxacin concentrations (0 to 30 ng/mL) and duration of exposure (15 to 75 min), for wild-type cells and the \dreca\ and \teneighty\ mutants.}
+    \caption{Histograms of the fraction of the bacterial cell occupied by the nucleoid (stained using the Sytox Green dye) at different ciprofloxacin concentrations (0 to 30 ng/mL) and duration of exposure (15 to 75 min), for wild-type cells and the \dreca\ and \teneighty\ mutants. \ncells{15,029}. \nnucl{20,831}.}
     \label{SIFig:mutants_nucleoid_compaction}
 \end{suppfigure*}
