Calculate the number of cells/spots/nucleoids at the beginning

--- a/Notebooks/Ciprofloxacin/Nucleoid.ipynb
+++ b/Notebooks/Ciprofloxacin/Nucleoid.ipynb
@@ -62,21 +62,104 @@
     "        .drop_duplicates(object_name='RecB_spots', subset=['Dataset', 'Position', 'TrackHeadIndices'])\n",
     "        .assign(Time_min=lambda df: df.Time_min + 15)\n",
     "        .bin_column(col='Time_min', binsize=15, binlabels='left')\n",
-    "        .assign(Group=lambda df: df.Group\n",
-    "                                   .astype('category')\n",
-    "                                   .cat.set_categories(['0 ng/ml', '3 ng/ml', '10 ng/ml', '20 ng/ml', '30 ng/ml'], ordered=True))\n",
+    "        .assign(Group=lambda df: df.Group.astype('category').cat.set_categories(['0 ng/ml', '3 ng/ml', '10 ng/ml', '20 ng/ml', '30 ng/ml'], ordered=True))\n",
     "        )"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## General statistics\n",
+    "\n",
+    "Number of cells"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Indices    24014\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "data.describe()"
+    "display(data\n",
+    "        .Bacteria_large\n",
+    "        .query('Frame == 0')\n",
+    "        .agg({'Indices':'count'})\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Number of RecB spots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Indices    79969\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(data\n",
+    "        .RecB_spots\n",
+    "        .agg({'Indices':'count'})\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Number of nucleoids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Indices    31441\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(data\n",
+    "        .Nucleoid\n",
+    "        .query('Frame == 0')\n",
+    "        .agg({'Indices':'count'})\n",
+    "        )"
    ]
   },
   {
