--- a/Notebooks/Ciprofloxacin/RecA.ipynb
+++ b/Notebooks/Ciprofloxacin/RecA.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -56,6 +56,39 @@
     "        .assign(Time_min=lambda df: df.Time_min + 15)\n",
     "        .bin_column(col='Time_min', binsize=15, binlabels='left')\n",
     "        .assign(object_name='Bacteria_large', ClassIdx=lambda df: df.ClassIdx.replace({1: 'Diffuse', 2: 'Filament', 3: 'Focus'}))\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## General statistics\n",
+    "\n",
+    "Number of cells"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Indices    32031\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(data\n",
+    "        .Bacteria_large\n",
+    "        .query('Frame == 0')\n",
+    "        .agg({'Indices':'count'})\n",
     "        )"
    ]
   },
