--- a/Notebooks/Ciprofloxacin/RecB_spots.ipynb
+++ b/Notebooks/Ciprofloxacin/RecB_spots.ipynb
@@ -91,12 +91,66 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "data.describe()"
+    "## General statistics\n",
+    "\n",
+    "Total number of cells"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Indices    66764\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(data\n",
+    "        .Bacteria_large\n",
+    "        .query('Frame == 0')\n",
+    "        .agg({'Indices':'count'})\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Total number of spots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Indices    170138\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(data\n",
+    "        .RecB_spots\n",
+    "        .agg({'Indices':'count'})\n",
+    "        )"
    ]
   },
   {
