--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -213,8 +213,8 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
 % Mutants: nucleoid compaction
 \begin{suppfigure*}[htbp]
     \begin{center}
-    \includegraphics[width=\textwidth]{SI_Figures/Mutants_nucleoid_compaction.pdf}
+    \includegraphics[width=.8\textwidth]{SI_Figures/Mutants_nucleoid_compaction.pdf}
     \end{center}
-    \caption{Histograms of the fraction of the bacterial cell occupied by the nucleoid (stained using the Sytox Green dye) at different ciprofloxacin concentrations (0 to 30 ng/mL) and duration of exposure (15 to 75 min), for wild-type cells and the \dreca\ and \teneighty\ mutants. \ncells{15,029}. \nnucl{20,831}.}
+    \caption{Average fraction of the bacterial cell occupied by the nucleoid (stained using the Sytox Green dye) at different ciprofloxacin concentrations (0 to 30 ng/mL) and duration of exposure (15 to 75 min), for wild-type cells and the \dreca\ and \teneighty\ mutants. Dots represent individual datasets, and dashes the average between them. \ncells{15,029}. \nnucl{20,831}.}
     \label{SIFig:mutants_nucleoid_compaction}
 \end{suppfigure*}
