--- a/Methods.tex
+++ b/Methods.tex
@@ -2,7 +2,7 @@
 
 \subsection*{Strain construction}
 \textit{E. coli} MG1655 and derivatives were used in this study. A list of all strains and plasmids used are presented in Supp. Tables \ref{SItab:strains} and \ref{SItab:plasmids}.
-MEK2623 (RecB-Halo RecA-SYFP2) was constructed by transferring the RecA-SYFP2 tandem fusion by P1 transduction, using EL2514\cite{Wiktor2021} as a donor and MEK65\cite{Lepore2019a} as a receiver. The clones were selected on Kanamycin plates, and checked by Sanger sequencing. MEK2622 (\dreca) was constructed by tranferring the \textit{recA} deletion by P1 transduction, using BHC9 as a donor, and MEK65 as a receiver. MEK2324 and AL139-3 (\teneighty) were constructed by XXXXXX. AL119 was obtained by transforming the pDT6 plasmid (gift from Mark Dillingham) into the MEK65 strain by heat-shock.
+MEK2623 (RecB-Halo RecA-SYFP2) was constructed by transferring the RecA-SYFP2 tandem fusion by P1 transduction, using EL2514\cite{Wiktor2021} as a donor and MEK65\cite{Lepore2019a} as a receiver. The clones were selected on Kanamycin plates, and checked by Sanger sequencing. MEK2622 (\dreca) was constructed by tranferring the \textit{recA} deletion by P1 transduction, using BHC9 as a donor, and MEK65 as a receiver. AL119 was obtained by transforming the pDT6 plasmid (gift from Mark Dillingham) into the MEK65 strain by heat-shock.
 
 \subsection*{Microscopy samples preparation}
 For all experiments, the cells were grown in M9 supplemented with 0.2\% (w/v) glucose, 2 mM MgSO$_4$, 0.1 mM CaCl$_2$, 1X MEM Essential and MEM non-essential amino acids (Gibco).
@@ -10,9 +10,11 @@ For all experiments, the cells were grown in M9 supplemented with 0.2\% (w/v) gl
 Cells were grown overnight from a -80\celsius\ glycerol stock in 5 mL medium at 37\celsius, shaking at 150 rpm. In the morning, the cells were diluted 1:300 into 15 mL of medium and grown at 37\celsius, shaking at 150 rpm until they reached an \od\ of 0.2-0.3 (mid-exponential phase).
 Alternatively, a 15 mL culture was inoculated using a -80\celsius\ glycerol stock, and placed at 37\celsius\ with stirring in a turbidostat device (OGIBio), which measured \od\ and diluted cells at 3 min intervals, in order to keep them at a constant \od\ of 0.2.
 \subsubsection*{Halo labelling}
-This protocol was adapted from \cite{Lepore2019a} to be used on living cells. A volume of cells equivalent to 1 mL at \od=0.2 was centrifuged (8000 rpm) and resuspended in 1 mL of fresh medium. 5 µL of JF549 dye (Janelia Fluor Halo-tag Ligand, Promega) was added (final concentration 1 µM) and the cells were further incubated for 1h at 37\celsius\ in the dark, shaking at 150 rpm.
+The same labelling protocol as in \cite{Lepore2023} was used. A volume of cells equivalent to 1 mL at \od=0.2 was centrifuged (8000 rpm) and resuspended in 1 mL of fresh medium. 5 µL of JF549 dye (Janelia Fluor Halo-tag Ligand, Promega) was added (final concentration 1 µM) and the cells were further incubated for 1h at 37\celsius\ in the dark, shaking at 150 rpm.
 \subsubsection*{DNA labelling}
 When relevant, cellular DNA was labelled by adding Sytox Green (Invitrogen) at a concentration of 500 nM, at the same time as the JF549 dye. It was incubated as described above.
+\subsubsection*{Gam overexpression}
+For experiments where Gam was over-expressed, arabinose was added to the cells during the labelling step, at 1\% final concentration. Arabinose (at the same concentration) was also added to the medium for subsequent washes, and in the agar-pad to maintain exposure during imaging.
 \subsubsection*{Dye removal}
 The cells were centrifuged for 3 min at 8000 rpm, the supernatant discarded, and the pellet resuspended in 1 mL of fresh medium and transferred to a new tube to avoid the dyes sticking to the plastic of the tube. This procedure was repeated 3 times to fully remove unbound dye. The cells were finally resuspended in 200 µL medium.
 \subsubsection*{Sample preparation}
@@ -58,7 +60,7 @@ The PyBerries package, combined with the pandas library, allowed to easily impor
 \paragraph*{Fitting RecB DNA binding times}
 The binding time of individual RecB molecules on DNA was extracted in BACMMAN as the lifetime of the bright JF549 fluorescent spots. The binding times histogram was fitted with a bi-exponential decay function of the type $y=a_1.e^{-k_1.t} + a_2.e^{-k_2.t}$. To improve the reliability of the fits, a bootstrapping procedure was used. For each group, 100 resamplings with replacement were made, and fitted individually. Each fit parameter was estimated as the median of all fitted parameters.
 
-Because we are unable to differentiate whether the disappearance of a fluorescent spot is due to photobleaching or to unbinding and returning to the pool of diffusing molecules, we must consider that the fitted "spot disappearance rates" $k_1$ and $k_2$ are a sum of RecB's dissociation rate from DNA and the dye's bleaching rate ($k_1=k_{d1}+k_b$ and $k_2=k_{d2}+k_b$, with $k_{d1}$ and $k_{d2}$ the two RecB dissociation rates, and $k_b$ the bleaching rate). The bleaching rate was calculated for each dataset, as described in Supp. Note \ref{note:dye_bleaching} and Supp. Figure \ref{SIFig:dye_bleaching} and subtracted to retrieve the true RecB dissociation rates from DNA.
+Because we were unable to differentiate whether the disappearance of a fluorescent spot was due to photobleaching or to unbinding and returning to the pool of diffusing molecules, we had to consider that the fitted "spot disappearance rates" $k_1$ and $k_2$ were a sum of RecB's dissociation rate from DNA and the dye's bleaching rate ($k_1=k_{d1}+k_b$ and $k_2=k_{d2}+k_b$, with $k_{d1}$ and $k_{d2}$ the two RecB dissociation rates, and $k_b$ the bleaching rate). The bleaching rate was calculated for each dataset, as described in Supp. Note \ref{note:dye_bleaching} and Supp. Figure \ref{SIFig:dye_bleaching} and subtracted to retrieve the true RecB dissociation rates from DNA.
 
 \paragraph*{Estimation of the rate of RecB recruitment to DNA}
 For each timelapse, we quantified the total number of RecB spots that were bound to DNA. This could not be achieved by thresholding on the lifetime histograms, as a significant number of short-lived spots correspond to DNA-bound RecB molecules. To estimate the total number of DNA-bound RecB, we considered that all RecB spots that disappeared with a slower rate (as determined by the bi-exponential decay fit) were DNA-bound, and the spots that disappeared with a faster rate were slow-diffusing complexes. We multiplied the total number of spots that appeared during the timelapse by the proportion of slow-dissociating spots retrieved from the lifetime histogram fits, which gave us an estimate of the number of DNA-bound RecB per timelapse, from which a number of recruitment events per hour can be calculated.
