Removed unused cell

--- a/Notebooks/Mutants/Nucleoid.ipynb
+++ b/Notebooks/Mutants/Nucleoid.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "metadata": {}
    },
@@ -283,15 +283,14 @@
     "      .agg({'frac_nucleoid':'mean'})\n",
     "      )\n",
     "\n",
-    "palette = ['cornflowerblue', 'sandybrown', 'firebrick']\n",
-    "\n",
     "(\n",
     "      so.Plot(df, x='Time_min_bin', y='frac_nucleoid', color='Strain')\n",
     "      .facet(col='Strain', row='Cipro')\n",
     "      .layout(size=(9, 6))\n",
     "      .add(so.Dash(), so.Agg(), legend=False)\n",
     "      .add(so.Dots(fillalpha=1, pointsize=4), so.Jitter(), legend=False)\n",
-    "      .scale(color=so.Nominal(palette, order=['WT', 'Δ$recA$', 'RecB$_{1080}$']), x=so.Continuous().tick(every=15))\n",
+    "      .scale(color=so.Nominal(['cornflowerblue', 'sandybrown', 'firebrick'],\n",
+    "             order=['WT', 'Δ$recA$', 'RecB$_{1080}$']), x=so.Continuous().tick(every=15))\n",
     "      .label(x='Time (min)', y='Fraction of the cell\\noccupied by the nucleoid')\n",
     "      .limit(y=(0.25, 0.5))\n",
     "      .save(loc='/media/daniel/HDD Daniel/DanielThedie/Python/RecB_article/SI_Figures/Mutants_nucleoid_compaction.pdf', format='pdf', bbox_inches='tight')\n",
@@ -875,33 +874,6 @@
     "    .limit(x=(-5, 5), y=(0, None))\n",
     "    # .save(loc='/media/daniel/HDD Daniel/DanielThedie/Python/RecB_article/SI_Figures/RecB_Nucleoid_position_timepoints.pdf', format='pdf', bbox_inches='tight')\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pybacmman.selections import store_selection\n",
-    "\n",
-    "df = (data\n",
-    "      .apply_filters({'RecB_spots':'TrackLength >= 5'})\n",
-    "      .assign(object_name='RecB_spots', spot_in_nucleoid=lambda df: df.ParentNucleoidIndices.notna().astype('int'))\n",
-    "      .add_from_child(object_name='Bacteria_large', col='centerLongCoord', child='Nucleoid', agg='first', rename='nucleoid_pos')\n",
-    "      .add_from_child(object_name='Bacteria_large', col=['spot_in_nucleoid'], child='RecB_spots', agg='first', rename=['in_nucleoid'])\n",
-    "      .Bacteria_large\n",
-    "      .assign(in_nucleoid=lambda df: df.in_nucleoid.replace({0:'No', 1:'Yes'}))\n",
-    "      .query('Dataset == \"240424_2\" and in_nucleoid == \"No\"')\n",
-    "      )\n",
-    "\n",
-    "store_selection(df,\n",
-    "            #     dsPath='D:\\\\Daniel\\\\BACMMAN\\\\Timelapse',\n",
-    "                dsName=\"Timelapse\\\\240424_2\",\n",
-    "                objectClassIdx=0,\n",
-    "                selectionName='Spot_non_nucleoid',\n",
-    "                port=25333, python_proxy_port=25334, address='127.0.0.1'\n",
-    "                )"
    ]
   }
  ],
