Minor sentence edit

--- a/Introduction.tex
+++ b/Introduction.tex
@@ -8,7 +8,7 @@ DNA double-strand breaks (DSBs) pose a serious threat to the integrity of bacter
 A common source of DSBs in \emph{E. coli} is the collision of the replication fork with DNA-bound proteins, which leads to the disassembly of the replisome\cite{Michel1997}. It has been reported that per cell cycle, $\sim$18\% of cells showed signs of endogenous DNA damage, most likely from replication fork breakage\cite{Sinha2018}. Replisome disassembly results in a Y-shaped DNA structure that is bound by the RuvAB complex, which pulls the DNA strands (in a process called "branch migration") to create a "chicken-foot" four-way DNA structure\cite{Seigneur1998}. The free end of this structure is a DNA double strand end, and is bound by RecBCD, which either (i) digests the whole DNA tail and displaces RuvAB, allowing the replisome to be re-loaded without RecA loading and SOS induction\cite{Seigneur1998}, or (ii) recognises a Chi-site and loads the RecA protein onto the 3' end of the DNA tail\cite{Michel2001}. Since this part of the DNA was recently replicated, a homologous sequence is likely to be present in close proximity, and can be used for homologous recombination.
 
 % Exogenous DSBs (ciprofloxacin)
-\emph{E. coli} cells might also experience DSBs from exo\-genous sources, such as anti\-biotics. Ciprofloxacin is an antibiotic of the fluoro\-quinolones family, which causes DSBs. In \emph{E. coli}, it does so by binding covalently to DNA topoisomerase II (gyrase), and trapping it in a DNA-bound conformation\cite{Kohanski2010}. The exact mechanism through which the DSBs are created is still unclear. Since the poisoned gyrase is tightly bound to DNA, it is likely to cause replication fork collisions\cite{Wentzell2000, Drlica2008}, and the subsequent repair of a chicken foot structure. Furthermore, the ciprofloxacin-poisoned gyrase is trapped in the "open" stage of its catalytic cycle, where it holds together two disjointed DNA ends. Therefore, upon removal of the gyrase (through a process that involves the ExoVII nuclease\cite{Huang2021}), it is possible that a DSB is formed independently of DNA replication\cite{Zhao2006}. Taken together, these studies suggest that ciprofloxacin causes both replication-dependent and independent DSBs to occur.
+\emph{E. coli} cells might also experience DSBs from exo\-genous sources, such as anti\-biotics. Ciprofloxacin is an antibiotic of the fluoro\-quinolones family, which causes DSBs. In \emph{E. coli}, it does so by binding covalently to DNA topoisomerase II (gyrase), and trapping it in a DNA-bound conformation\cite{Kohanski2010}. The exact mechanism through which the DSBs are created is still unclear. Since the poisoned gyrase is tightly bound to DNA, it is likely to cause replication fork collisions\cite{Wentzell2000, Drlica2008}, and the subsequent repair of a chicken foot structure. Furthermore, the ciprofloxacin-poisoned gyrase is trapped in the "open" stage of its catalytic cycle, where it holds together two disjointed DNA ends. Therefore, upon removal of the gyrase (through a process that involves the ExoVII nuclease\cite{Huang2021}), the formation of a DSB independently of DNA replication can be reasonably expected\cite{Zhao2006}. Taken together, these studies suggest that ciprofloxacin causes both replication-dependent and independent DSBs to occur.
 
 % General response to DNA damage (SOS and nucleoid compaction)
 DSB repair is the first step of a general response to DNA damage known as the SOS response\cite{Baharoglu2014}. The formation of the RecA nucleoprotein filament triggers the auto-proteolysis of the LexA transcriptional repressor, which results in the activation of the genes of the SOS regulon. Among those are RecA, inhibitors of cell division such as SulA, and the SMC (structural maintenance of chromosomes)-like protein RecN. As a result, the cells elongate\cite{Bos2015}, and their DNA is compacted at the cell centre\cite{Odsbu2014}.
