Added/adjusted captions

--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -68,7 +68,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
 % Acquisition parameters table
 \begin{supptable}[htbp]
     \centering
-    \caption{}
+    \caption{Acquisition parameters used for microscopy.}
     \begin{tabular}{lllllll}
         \toprule
         Channel & Illumination & Intensity & Exposure (ms) & EM gain & Images (interval) & Z-stack\\
@@ -76,7 +76,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
         Brightfield & Lamp & NA & 30 & 0 & 1 & 16 slices, 0.2 µm step\\
         JF549 & 561-nm & 2 mW & 1000 & 150 & 50 (2 sec) & No\\
         SYFP2 & 488-nm & 2 mW & 50 & 100 & 50 (2sec) & No\\
-        Sytox & 488-nm & 2 mW & 50 & 100 & 1 & No\\
+        Sytox Green & 488-nm & 2 mW & 50 & 100 & 1 & No\\
         \bottomrule
     \end{tabular}
     \label{SItab:acquisition_channels}
@@ -188,7 +188,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \begin{center}
     \includegraphics[width=\textwidth]{SI_Figures/RecB_Nucleoid_position_timepoints.pdf}
     \end{center}
-    \caption{Overlay of nucleoid density and position of DNA-bound RecB molecules along the cell's long axis, for different ciprofloxacin concentrations (columns) and durations of exposure (rows). \ncells{15,029}. \nspots{58,331}. \nnucl{20,831}.}
+    \caption{Overlay of nucleoid density (green area) and position of DNA-bound RecB molecules (magenta bars) along the cell's long axis, for different ciprofloxacin concentrations (columns) and durations of exposure (rows). \ncells{15,029}. \nspots{58,331}. \nnucl{20,831}.}
     \label{SIFig:recb_nucleoid_timepoints}
 \end{suppfigure*}
 
@@ -197,7 +197,7 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \begin{center}
     \includegraphics[width=.8\textwidth]{SI_Figures/Mutants_cell_lengths.pdf}
     \end{center}
-    \caption{Evolution over time of the cell length of wild-type and mutant \emph{E. coli} strains exposed or not to ciprofloxacin (30 ng/mL). Black dots represent average cell lengths for individual datasets, and coloured bars the median values between datasets. \ncells{56,131}.}
+    \caption{Evolution over time of the average cell length of wild-type and mutant \emph{E. coli} strains exposed or not to ciprofloxacin (30 ng/mL). Black dots represent average cell lengths for individual datasets, and coloured bars the median values between datasets. \ncells{56,131}.}
     \label{SIFig:mutants_cell_lengths}
 \end{suppfigure*}
 
